# LearnWebGPU

./: .gitignore  .gitmodules
Samples/Advanced/: CMakeLists.txt  EMCCBuild.sh  build.sh  entrypoint.html
Samples/Advanced/Resources/DrawCubeRenderGraph/Shaders/: DrawCubePassFS.wgsl  DrawCubePassVS.wgsl
Samples/Advanced/Resources/DrawTriangleRenderGraph/Shaders/: DrawTrianglePassVS.wgsl
Samples/Advanced/Resources/SimpleRenderGraph/Shaders/: DrawObjectPassFS.wgsl  DrawObjectPassVS.wgsl
Samples/Advanced/Source/: EntryPoint.cpp
Samples/Advanced/Source/FileSystem/: FileSystem.cpp  FileSystem.h  Resources.cpp  Resources.h
Samples/Advanced/Source/Graph/: DrawObjectPass.cpp  DrawObjectPass.h  SimpleRenderGraph.cpp  SimpleRenderGraph.h
Samples/Advanced/Source/Graph/DrawCubeRenderGraph/: DrawCubePass.cpp  DrawCubePass.h  DrawCubeRenderGraph.cpp  DrawCubeRenderGraph.h
Samples/Advanced/Source/Graph/DrawTriangleRenderGraph/: DrawTrianglePass.cpp  DrawTrianglePass.h  DrawTriangleRenderGraph.cpp  DrawTriangleRenderGraph.h
Samples/Advanced/Source/Graph/SimpleRenderGraph/: DrawObjectPass.cpp  DrawObjectPass.h  (+2 more)
Samples/Advanced/Source/Math/: TMatHelpers.h  TQuatHelpers.h  TVecHelpers.h  half.h  mat3.h  mat4.h  quat.h  scalar.h  vec2.h  vec3.h  vec4.h
Samples/Advanced/Source/RenderGraph/: GfxDeivce.cpp  GfxDevice.h  RGDefine.h  RenderGraph.cpp  RenderGraph.h  RenderGraphPlayer.cpp  RenderGraphPlayer.h
Samples/Advanced/WebGPURenderGraph/WebGPURenderGraph.xcodeproj/: project.pbxproj
Samples/Advanced/XCodeProject/WebGPURenderGraph.xcodeproj/: project.pbxproj
(+118 files in other folders)
